--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,5 +1,8 @@
+<span>Cyber Security Presentation</span>
+
+{# 
 <nav>
     <a href="/" class="title">Cyber Security Presentation</a>&nbsp;
     <a href="/linux.md">Why you should be using Linux®</a>&nbsp;
-    <a href="/yvpnbad.md">Missconceptions about VPNs</a>
-</nav>
+    <a href="/yvpnbad.md">Misconceptions about VPNs</a>
+</nav> #}
